[Material][Mac] Change the User Account Text Color

- Fix the User Account text colors:
  - For themed windows, the text color should be the same as the
   selected tab's title
  - In Guest Mode, the text color should only be white if the browser is
  not using MD

BUG=646060,648890

Review-Url: https://codereview.chromium.org/2369663002
Cr-Commit-Position: refs/heads/master@{#423060}

Former-commit-id: 28f2ba5dd2bd96becc57e5caf9447e7ce65db96b